<resources>
    <string name="SS_ALLOWS_THE_APP_TO_TRANSFER_YOUR_DATA_VIA_BLUETOOTH_USING_THE_ACCESSORY_FRAMEWORK">Allows the app to transfer your data via Bluetooth using the accessory framework</string>
    <string name="SS_TRANSFERRING_DATA_VIA_FRAMEWORK_ABB">Transferring data via framework</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_connected_device_status">Access device connection status</string>
    <string name="access_connected_device_status_description">This application can access the wearable device connection status.</string>
    <string name="after_post_they_appear">The feedback that you send will appear here.</string>
    <string name="alertdialog_disconnect_popup_new_device_content">This will end your connection with %s.</string>
    <string name="all">All</string>
    <string name="allow_following_permissions">The Galaxy Wearable app needs the following permissions.</string>
    <string name="always">Always</string>
    <string name="android_version">Android version</string>
    <string name="answered">ANSWERED</string>
    <string name="app_name">Galaxy Wearable</string>
    <string name="ask_again">Ask again</string>
    <string name="ask_again_for_additional_questions">Tap ASK AGAIN to ask additional questions related to those already posted.</string>
    <string name="attach">Attach</string>
    <string name="attachments">Attachments</string>
    <string name="band">Band</string>
    <string name="band_guide">Disconnect your band from the previous phone. In the Galaxy Wearable app on the previous phone, tap the menu drawer, then tap Disconnect.</string>
    <string name="bluetooth_off_text_permission_fragment">Bluetooth will be turned on to pair up with your device.</string>
    <string name="btn_next">Next</string>
    <string name="build_number">Build number</string>
    <string name="button_start_scan_devices">SCAN</string>
    <string name="button_stop_scan_devices">STOP</string>
    <string name="button_text_bluetooth_turn_on">Turn on</string>
    <string name="cancel">Cancel</string>
    <string name="cant_attach_more_files">Can\'t attach more than %d files.</string>
    <string name="cant_record">Can\'t record more than 60 seconds.Recording saved and attached to feedback.</string>
    <string name="capture_screen">Capture screen</string>
    <string name="cat_attch_morethan5">Can\'t attach more than 5 files. Files can\'t exceed %d MB.</string>
    <string name="com_samsung_accessory">Samsung Accessory Service</string>
    <string name="com_samsung_android_gearfit2plugin">GearFit2Plugin</string>
    <string name="com_samsung_android_geargplugin">Galaxy Watch Plugin</string>
    <string name="com_samsung_android_gearoplugin">Gear S plug-in</string>
    <string name="compose">COMPOSE</string>
    <string name="connect_popup_content">Connecting</string>
    <string name="connected">Connected</string>
    <string name="contact_us_ask">Ask questions</string>
    <string name="contact_us_chn_read_and_agree">Read and agree to the following:</string>
    <string name="contact_us_error">Error Reports</string>
    <string name="contact_us_faq">FAQ</string>
    <string name="contact_us_feedback">Feedback List</string>
    <string name="custom_binary_error_dialog_title">The operating system on your phone has been modified in an unauthorised way, and is not compatible with the Samsung Gear app. Check your operating system and try again.</string>
    <string name="delete">DELETE</string>
    <string name="deleting_unused_file">Deleting unused files from previous version...</string>
    <string name="dialog_popup_button_later">Later</string>
    <string name="dialog_popup_button_update">Update</string>
    <string name="discovery_guide_description">Your device might not appear if it\'s connected to a different phone. Here\'s what to do:</string>
    <string name="discovery_guide_title">Device not appearing?</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="done">DONE</string>
    <string name="download_failure_message">Download failed. Try again.</string>
    <string name="earbuds">Earbuds</string>
    <string name="earbuds_guide">To connect, put the earbuds in your ears, then touch and hold both earbuds until you hear a beep.</string>
    <string name="easy_scanning_devices">Connecting to your device...</string>
    <string name="error_while_sending">A server error has occurred.</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_not_sent">Could not send the feedback</string>
    <string name="feedback_sent_success">Feedback successfully sent</string>
    <string name="file_already_attached">Unable to attach file.File already attached.</string>
    <string name="file_already_exists">File already exists.</string>
    <string name="file_format_not_supported">Can\'t attach file. File format not supported .</string>
    <string name="font_fontFamily_roboto_medium">sans-serif</string>
    <string name="font_fontFamily_roboto_regular">sans-serif</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_not_selected">Couldn\'t send error report.Select frequency of problem and try again</string>
    <string name="gear_fit_model_name">Gear Fit</string>
    <string name="gear_not_presesnt">Mine\'s not here</string>
    <string name="gear_reset_guide">Your watch is connected to another device. To connect to this phone instead, go to Settings on your watch, then select Reset watch.</string>
    <string name="hint_text">Be considerate and include important details so your consultation is helpful.\10\10Don\'t enter your personal information.\10\10Make sure the Send system log data option is selected.\10\10You can attach a video or screenshot to make your issues easier to understand.</string>
    <string name="installPluginInfo">App to install</string>
    <string name="install_from_play_store_device_type_band">You need the plugin to control your band with the Galaxy Wearable app.</string>
    <string name="install_from_play_store_device_type_earbuds">You need the plugin to control your earbuds with the Galaxy Wearable app.</string>
    <string name="install_from_play_store_device_type_watch">You need the plugin to control your watch with the Galaxy Wearable app.</string>
    <string name="just_this_time">Just this time</string>
    <string name="less_ram_size_description">Your phone may not be able to connect to all watches because it has less than %s of memory.</string>
    <string name="lets_pair_up">Let\'s pair up</string>
    <string name="loading">Loading…</string>
    <string name="make_sure_both_passkey">Do the passkeys on your phone and your watch match? Tap OK on each to pair them.</string>
    <string name="manage_devices_delete_btn_text">Remove</string>
    <string name="manage_devices_delete_popup_main_text_one">Remove %d device and associated apps that are no longer needed?</string>
    <string name="manage_devices_delete_popup_main_text_others">Remove %d devices and associated apps that are no longer needed?</string>
    <string name="manage_devices_deleteing">Removing...</string>
    <string name="manage_devices_desc_text1">Select devices to remove from your phone.</string>
    <string name="manage_devices_desc_text2">You\'ll need to reset any removed device before you can connect it to your phone again.</string>
    <string name="manage_devices_title_text">Select devices</string>
    <string name="manage_devices_title_text_select">%d selected</string>
    <string name="max_record_time">Maximum recording time reached %d seconds. Save recording and add it to attachment.</string>
    <string name="maximum_power_saving_mode_dialog_body">The Gear has been disconnected.</string>
    <string name="maximum_power_saving_mode_dialog_body_p2">Unable to open %s in Maximum power saving mode.</string>
    <string name="maximum_power_saving_mode_dialog_title">Unable to open app</string>
    <string name="model_number">Model number</string>
    <string name="network_problem_message">Check your network connection, then try again.</string>
    <string name="no_earbud_body_1">Put your earbuds in the case and close it to see whether they\'re charged.</string>
    <string name="no_earbud_body_2">If your earbuds are charged, put them in your ears, then touch and hold both earbuds for 3 seconds until you hear the beep that means they\'re ready to pair.</string>
    <string name="no_earbud_body_3">To connect Gear IconX (2018) earbuds, leave them in the case and press and hold the Bluetooth button.</string>
    <string name="no_feedback">No feedback</string>
    <string name="no_gear_body">Don\'t worry! First, make sure your device is turned on.</string>
    <string name="no_gear_description">Device not appearing?</string>
    <string name="ok">OK</string>
    <string name="privacypolicy_learn_more">Learn more</string>
    <string name="sensitive_privacy_text">Use of sensitive personal data for required functions</string>
    <string name="transfer_privacy_text">Transfer of personal data abroad</string>
    <string name="watch">Watch</string>
    <string name="watch_guide">On the Apps screen, Tap Settings &gt; Connect to new phone.</string>
    <string name="welcome_to_samsung_gear_promotion_contact_us">Contact us</string>
</resources>